--- a/main.ipynb
+++ b/main.ipynb
@@ -66,11 +66,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "110\n",
+      "120\n",
+      "130\n",
+      "140\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "arr = [100, 110, 120, 130, 140]\n",
+    "\n",
+    "\"\"\"items[arr[i] for i in arr  ] # I wanted to create an iteration to print all the the values but doesnt work\n",
+    "# print(arr[i] for i in arr)\n",
+    "print(items)\"\"\"\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    print(arr[i])\n",
+    "\n",
+    "# print(arr[4])"
    ]
   },
   {
@@ -94,11 +116,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Original array: [100, 110, 120, 130, 140]\n",
+      " New array after appending: [100, 110, 120, 130, 140, 400]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "print(f\" Original array: {arr}\")\n",
+    "arr.append(400)\n",
+    "print(f\" New array after appending: {arr}\")\n",
+    "\n"
    ]
   },
   {
@@ -122,11 +157,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array:, [100, 110, 120, 130, 140, 400]\n",
+      "Reversed array:, [400, 140, 130, 120, 110, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "print(f\"Original array:, {arr}\")\n",
+    "arr.reverse()\n",
+    "print(f\"Reversed array:, {arr}\")\n",
+    "\n",
+    "\n",
+    "# print(arr)"
    ]
   },
   {
@@ -149,11 +199,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length in bytes of one array item: 4 bytes\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "import numpy as np\n",
+    "\n",
+    "arr2 = np.array(arr, dtype=np.int32)  # 4 bytes per int32\n",
+    "print(f\"Length in bytes of one array item: {arr2.itemsize} bytes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The size of one array item in bytes is: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write your code HERE\n",
+    "\n",
+    "# I do not know or understand how\n",
+    "\n",
+    "item_size = len(arr)\n",
+    "\n",
+    "\n",
+    "print(\"The size of one array item in bytes is:\", item_size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximate size of one element in bytes: 28\n",
+      "Approximate total size of list in bytes: 168\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The chatbot recommends:\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "# Get the size of one element (assuming all elements are the same type)\n",
+    "element_size = sys.getsizeof(arr[0])\n",
+    "\n",
+    "# Calculate the total size roughly as the number of items times the size of one item\n",
+    "total_size = len(arr) * element_size\n",
+    "\n",
+    "print(\"Approximate size of one element in bytes:\", element_size)\n",
+    "print(\"Approximate total size of list in bytes:\", total_size)\n"
    ]
   },
   {
@@ -177,11 +291,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array: [400, 140, 130, 120, 110, 100]\n",
+      "Array after removing item by index: [400, 140, 120, 110, 100]\n",
+      "Removed item: 130\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "\n",
+    "print(\"Original array:\", arr)\n",
+    "removed_item = arr.pop(2)\n",
+    "\n",
+    "print(\"Array after removing item by index:\", arr)\n",
+    "print(\"Removed item:\", removed_item)"
    ]
   },
   {
@@ -205,11 +335,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array: [400, 140, 120, 110, 100]\n",
+      "New array after removing first occurrence of '400': [140, 120, 110, 100]\n",
+      "Removed item: None\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "\n",
+    "print(\"Original array:\", arr)\n",
+    "removed_item1 = arr.remove(400)\n",
+    "\n",
+    "print(\"New array after removing first occurrence of '400':\", arr)\n",
+    "print(\"Removed item:\", removed_item1)\n"
    ]
   },
   {
@@ -232,11 +378,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted list: [140, 120, 110, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "arr2 = arr\n",
+    "\n",
+    "print(\"Converted list:\",arr2)"
    ]
   },
   {
@@ -263,11 +420,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contains duplicates: False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "\n",
+    "check_dup = len(arr) != len(set(arr))\n",
+    "\n",
+    "print(f\"Contains duplicates: {check_dup}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contains duplicates: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr10 = [1,2,2]\n",
+    "\n",
+    "check_dup = len(arr10) != len(set(arr10))\n",
+    "\n",
+    "print(f\"Contains duplicates: {check_dup}\")\n"
    ]
   },
   {
@@ -300,9 +490,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum value: 100\n",
+      "Minimum value: -30\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "arr = [10, -2, -30 ,4 ,100 ,50]\n",
+    "\n",
+    "\n",
+    "print(\"Maximum value: {}\".format(max(arr)))\n",
+    "print(\"Minimum value: {}\".format(min(arr)))\n",
+    "\n"
    ]
   },
   {
@@ -326,11 +531,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even count: 4\n",
+      "Odd count: 4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "arr = [10 ,21 ,32 ,43 ,54 ,65 ,76 ,87]\n",
+    "\n",
+    "even = 0\n",
+    "odd = 0\n",
+    "\n",
+    "for number in arr:\n",
+    "    if number % 2 == 0 :\n",
+    "        even += 1\n",
+    "    else:\n",
+    "        odd += 1\n",
+    "\n",
+    "print(f\"Even count: {even}\")\n",
+    "print(f\"Odd count: {odd}\")\n",
+    "        \n",
+    "\n"
    ]
   },
   {
@@ -361,11 +590,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rotated Array: [30, 40, 50, 10, 20]\n",
+      "[30, 40, 50]\n",
+      "[10, 20]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "arr = [10 ,20 ,30 ,40 ,50]\n",
+    "k =2\n",
+    "\n",
+    "\"\"\"    # Sample Output\n",
+    "    Rotated Array: [30 ,40 ,50 ,10 ,20]\"\"\"\n",
+    "\n",
+    "rotated_array1 = arr[k::]\n",
+    "rotated_array2 = arr[:k:]\n",
+    "comb_rotated_array = rotated_array1 + rotated_array2\n",
+    "# rotated_array = \n",
+    "print(f\"Rotated Array: {comb_rotated_array}\")\n",
+    "\n",
+    "print(rotated_array1)\n",
+    "print(rotated_array2)\n",
+    "\n"
    ]
   },
   {
@@ -390,11 +644,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merged Sorted Array: [1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code HERE"
+    "# Write your code HERE\n",
+    "\n",
+    "# Sample Input\n",
+    "arr1 = [1 ,3 ,5]\n",
+    "arr2 = [2 ,4 ,6]\n",
+    "\n",
+    "sorted_arr = sorted(arr1 + arr2)\n",
+    "\n",
+    "print(f\"Merged Sorted Array: {sorted_arr}\")\n",
+    "\n",
+    "# Sample Output\n",
+    "#Merged Sorted Array: [1 ,2 ,3 ,4 ,5 ,6]\n"
    ]
   },
   {
@@ -418,13 +691,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
